Revert to test if CI issues are caused by past commits