@@ -65,6 +65,7 @@ import org.fxmisc.easybind.Subscription;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.google.common.base.Preconditions.checkNotNull;
@@ -397,7 +398,7 @@ public class TradeWizardAmountController implements Controller {
                 .filter(chatMessage -> chatMessage.getBisqEasyOffer().isPresent())
                 .map(chatMessage -> chatMessage.getBisqEasyOffer().get())
                 .filter(this::filterOffers)
-                .toList();
+                .collect(Collectors.toList());
         boolean isSellOffer = bisqEasyOffers.stream()
                 .map(Offer::getDirection)
                 .map(Direction::isSell)
