@@ -68,6 +68,7 @@ public class TradeWizardSelectOfferController implements Controller {
     @Getter
     private final TradeWizardSelectOfferView view;
     private final ReputationService reputationService;
+    private final SettingsService settingsService;
     private final UserIdentityService userIdentityService;
     private final BisqEasyOfferbookChannelService bisqEasyOfferbookChannelService;
     private final UserProfileService userProfileService;
@@ -89,7 +90,7 @@ public class TradeWizardSelectOfferController implements Controller {
         ChatService chatService = serviceProvider.getChatService();
         bisqEasyOfferbookChannelService = chatService.getBisqEasyOfferbookChannelService();
         reputationService = serviceProvider.getUserService().getReputationService();
-        SettingsService settingsService = serviceProvider.getSettingsService();
+        settingsService = serviceProvider.getSettingsService();
         bisqEasyService = serviceProvider.getBisqEasyService();
         userIdentityService = serviceProvider.getUserService().getUserIdentityService();
         userProfileService = serviceProvider.getUserService().getUserProfileService();
@@ -203,7 +204,7 @@ public class TradeWizardSelectOfferController implements Controller {
 
     void onSelectRow(TradeWizardSelectOfferView.ListItem listItem) {
         if (listItem == null) {
-            selectListItem(null);
+            selectListItem(listItem);
             return;
         }
         if (listItem.equals(model.getSelectedItem())) {
@@ -300,7 +301,7 @@ public class TradeWizardSelectOfferController implements Controller {
                 List<BitcoinPaymentMethod> matchingBitcoinPaymentMethods = peersOffer.getBaseSidePaymentMethodSpecs().stream()
                         .filter(e -> takersBitcoinPaymentMethodSet.contains(e.getPaymentMethod()))
                         .map(PaymentMethodSpec::getPaymentMethod)
-                        .toList();
+                        .collect(Collectors.toList());
                 if (matchingBitcoinPaymentMethods.isEmpty()) {
                     return false;
                 }
@@ -309,7 +310,7 @@ public class TradeWizardSelectOfferController implements Controller {
                 List<FiatPaymentMethod> matchingFiatPaymentMethods = peersOffer.getQuoteSidePaymentMethodSpecs().stream()
                         .filter(e -> takersFiatPaymentMethodSet.contains(e.getPaymentMethod()))
                         .map(PaymentMethodSpec::getPaymentMethod)
-                        .toList();
+                        .collect(Collectors.toList());
                 if (matchingFiatPaymentMethods.isEmpty()) {
                     return false;
                 }
