@@ -45,6 +45,7 @@ import lombok.Getter;
 
 import java.util.Comparator;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class ReputationDetailsPopup extends VBox {
     private final BisqTableView<ListItem> tableView;
@@ -63,7 +64,7 @@ public class ReputationDetailsPopup extends VBox {
                                 data.getBlockTime(),
                                 proofOfBurnService.calculateScore(data),
                                 data.getAmount()))
-                        .toList()));
+                        .collect(Collectors.toList())));
 
         BondedReputationService bondedReputationService = reputationService.getBondedReputationService();
         Optional.ofNullable(bondedReputationService.getDataSetByHash().get(userProfile.getBondedReputationKey()))
@@ -73,7 +74,7 @@ public class ReputationDetailsPopup extends VBox {
                                 bondedReputationService.calculateScore(data),
                                 Optional.of(data.getAmount()),
                                 Optional.of(data.getLockTime())))
-                        .toList()));
+                        .collect(Collectors.toList())));
 
         AccountAgeService accountAgeService = reputationService.getAccountAgeService();
         Optional.ofNullable(accountAgeService.getDataSetByHash().get(userProfile.getAccountAgeKey()))
@@ -81,14 +82,14 @@ public class ReputationDetailsPopup extends VBox {
                         .map(data -> new ListItem(ReputationSource.BISQ1_ACCOUNT_AGE,
                                 data.getDate(),
                                 accountAgeService.calculateScore(data)))
-                        .toList()));
+                        .collect(Collectors.toList())));
         SignedWitnessService signedWitnessService = reputationService.getSignedWitnessService();
         Optional.ofNullable(signedWitnessService.getDataSetByHash().get(userProfile.getSignedWitnessKey()))
                 .ifPresent(dataSet -> listItems.addAll(dataSet.stream()
                         .map(data -> new ListItem(ReputationSource.BISQ1_SIGNED_ACCOUNT_AGE_WITNESS,
                                 data.getWitnessSignDate(),
                                 signedWitnessService.calculateScore(data)))
-                        .toList()));
+                        .collect(Collectors.toList())));
 
         ProfileAgeService profileAgeService = reputationService.getProfileAgeService();
         Optional.ofNullable(profileAgeService.getDataSetByHash().get(userProfile.getProfileAgeKey()))
@@ -96,7 +97,7 @@ public class ReputationDetailsPopup extends VBox {
                         .map(data -> new ListItem(ReputationSource.PROFILE_AGE,
                                 data.getDate(),
                                 profileAgeService.calculateScore(data)))
-                        .toList()));
+                        .collect(Collectors.toList())));
 
         tableView = new BisqTableView<>(listItems);
         setPrefHeight(500);
