@@ -198,9 +198,9 @@ public final class BisqEasyOpenTradeChannel extends PrivateGroupChatChannel<Bisq
     }
 
     public UserProfile getPeer() {
-        checkArgument(!traders.isEmpty(),
+        checkArgument(traders.size() >= 1,
                 "traders is expected to has at least size 1 at getPeer() in  BisqEasyOpenTradeChannel");
-        return new ArrayList<>(traders).getFirst();
+        return new ArrayList<>(traders).get(0);
     }
 
     @Override
