@@ -67,11 +67,13 @@ final class CollectionChangeMapper<S, T> implements CollectionObserver<S> {
 
     @Override
     public void addAll(Collection<? extends S> sourceItems) {
-        executor.accept(() -> targetCollection.addAll(sourceItems.stream()
-                .filter(filterFunction::apply)
-                .map(mapFunction)
-                .filter(item -> !targetCollection.contains(item))
-                .toList()));
+        executor.accept(() -> {
+            targetCollection.addAll(sourceItems.stream()
+                    .filter(filterFunction::apply)
+                    .map(mapFunction)
+                    .filter(item -> !targetCollection.contains(item))
+                    .collect(Collectors.toList()));
+        });
     }
 
     @Override
@@ -81,7 +83,7 @@ final class CollectionChangeMapper<S, T> implements CollectionObserver<S> {
             targetCollection.addAll(sourceItems.stream()
                     .filter(filterFunction::apply)
                     .map(mapFunction)
-                    .toList());
+                    .collect(Collectors.toList()));
         });
     }
 
