@@ -89,13 +89,14 @@ public class ConnectionHandshakeInitiator {
             throw new ConnectionException("Received multiple responses from client. requests=" + responseNetworkEnvelopes);
         }
 
-        NetworkEnvelope responseNetworkEnvelope = responseNetworkEnvelopes.getFirst();
+        NetworkEnvelope responseNetworkEnvelope = responseNetworkEnvelopes.get(0);
         responseNetworkEnvelope.verifyVersion();
 
-        if (!(responseNetworkEnvelope.getEnvelopePayloadMessage() instanceof ConnectionHandshake.Response response)) {
+        if (!(responseNetworkEnvelope.getEnvelopePayloadMessage() instanceof ConnectionHandshake.Response)) {
             throw new ConnectionException("ResponseEnvelope.message() not type of Response. responseEnvelope=" +
                     responseNetworkEnvelope);
         }
+        ConnectionHandshake.Response response = (ConnectionHandshake.Response) responseNetworkEnvelope.getEnvelopePayloadMessage();
         Address address = response.getCapability().getAddress();
         if (banList.isBanned(address)) {
             throw new ConnectionException(ADDRESS_BANNED, "PeerAddress is banned. address=" + address);
